remove oneSignal Api id

--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@ window.addEventListener("load", () => {
              //oneSignal
           var OneSignal = window.OneSignal || [];
           var initConfig = {
-            appId: "76c69fac-45b5-4ec7-9144-2829a11d7b2a",
+            appId: "*******************",
             notifyButton: {
               enable: true,
             },
@@ -35,7 +35,7 @@ window.addEventListener("load", () => {
           //oneSignal
           var OneSignal = window.OneSignal || [];
           var initConfig = {
-            appId: "76c69fac-45b5-4ec7-9144-2829a11d7b2a",
+            appId: "************",
             notifyButton: {
               enable: true,
             },
